--- a/src/Templates/Installer_Package_with_LD/simple-package/scripts/files/com.simple.plist
+++ b/src/Templates/Installer_Package_with_LD/simple-package/scripts/files/com.simple.plist
@@ -1,14 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
-<dict>
-    <key>Label</key>
-    <string>com.simple.agent</string>
-    <key>ProgramArguments</key>
-    <array>
-    <string>/Library/Application Support/operator-payload</string>
-    </array>
-    <key>KeepAlive</key>
-    <true/>
-</dict>
+    <dict>
+        <key>Label</key>
+        <string>com.simple.agent</string>
+        <key>ProgramArguments</key>
+        <array>
+            <string>/Library/Application Support/operator-payload</string>
+            <string>-name</string>
+            <string>TECHNIQUE_NAME</string>
+        </array>
+        <key>KeepAlive</key>
+        <true/>
+    </dict>
 </plist>
